2011-11-15  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* dfp/stdlib.h: Added #include <features.h> to correct include order
	problem.
	* dfp/wchar.h: Likewise.
	* tests/test-stdlib.c: New test to verify <features.h> inclusion.
	* tests/test-wchar.c: New test to verify <features.h> inclusion.
	* Makefile.in (libdfp_tests): Added test-stdlib and test-wchar.

2011-10-27  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* configure: Regenerated.
	* configure.ac: Incremented the version number to 1.0.8.
	* Versions.def: Incremented the version number to 1.0.8.
	* tests/test-bfp-conversions.c: Added tests for extendsddf extendsdtf
	extenddfdd extendddtf extenddftd and extendtftd.

2011-10-27  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* base-math/Makefile: Moved 'classify' from sysdeps/soft-dfp/Makefile.
	* base-math/classify.c: Moved from sysdeps/soft-dfp/ because it's
	required for the power6 build as well.
	* base-math/extendsftd.c: Likewise.
	* base-math/extendsdtf.c: Likewise.
	* base-math/extenddfdd.c: Likewise.
	* base-math/trunctdsf.c: Likewise.
	* base-math/trunctfsd.c: Likewise.
	* base-math/extendddtf.c: Likewise.
	* base-math/extenddftd.c: Likewise.
	* base-math/extendsfsd.c: Likewise.
	* base-math/extendtftd.c: Likewise.
	* base-math/truncdddf.c: Likewise.
	* base-math/trunctfdd.c: Likewise.
	* base-math/trunctddf.c: Likewise.
	* base-math/truncsdsf.c: Likewise.
	* base-math/trunctdtf.c: Likewise.
	* base-math/extendsddf.c: Likewise.
	* base-math/extendsfdd.c: Likewise.
	* base-math/truncddsf.c: Likewise.
	* base-math/truncdfsd.c: Likewise.
	* tests/scaffold.c (_VC_P): Updated spacing in "Expected" and "Result"
	output.
	* tests/test-bfp-conversions.c: Added float -> _Decimal128 tests.
	* sysdeps/soft-dfp/Makefile: Moved 'classify' to base-math/Makefile.
	* sysdeps/soft-dfp/classify.c: Moved to base-math/ because it's
	required for the power6 build as well.
	* sysdeps/soft-dfp/extendsftd.c: Likewise.
	* sysdeps/soft-dfp/extendsdtf.c: Likewise.